--- a/test/map-idml.xhtml
+++ b/test/map-idml.xhtml
@@ -9,6 +9,7 @@
       <tr>
         <th>Systemname</th>
         <th>Benutzername</th>
+        <th>border|backgound</th>
         <th>Kommentar</th>
       </tr>
       <tr>
@@ -42,6 +43,21 @@
       <tr>
         <td>h$2~$1</td>
         <td>(Hauptteil)_Ueberschriften_U(\d)</td>
+      </tr>
+      <tr>
+        <td>Blackground</td>
+        <td>#000000</td>
+        <td>border</td>
+        <td>test with hex color code</td>
+      </tr>
+      <tr>
+        <td>Blackground</td>
+        <td>#FFFF00</td>
+        <td>background</td>
+        <td>test with hex color code</td>
+      </tr>
+      <tr>
+        <td><a href="map-docx.txt"></a></td>
       </tr>
     </table>
     <h2>Hinweise</h2>
